# ddvisitor

./: CMakeLists.txt  README.md
include/ddv/: deduce_callable.h  serial_visitor.h  visitable.h  visitor_common.h
tests/: test_ddv.cpp  test_serial_visitor.cpp
